--- a/EstudandoC_Sharp.csproj
+++ b/EstudandoC_Sharp.csproj
@@ -54,9 +54,18 @@
       <DependentUpon>Agenda.cs</DependentUpon>
     </Compile>
     <Compile Include="Agenda\Program.cs" />
+    <Compile Include="Agenda\DetalhesContato.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Agenda\DetalhesContato.Designer.cs">
+      <DependentUpon>DetalhesContato.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Agenda\Agenda.resx">
       <DependentUpon>Agenda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Agenda\DetalhesContato.resx">
+      <DependentUpon>DetalhesContato.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
