--- a/CRUD/View.ConsoleApp/View.ConsoleApp.csproj
+++ b/CRUD/View.ConsoleApp/View.ConsoleApp.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataManager\DataManager.csproj">
+      <Project>{5bb8fe24-9a99-4fb2-9096-01f70447be61}</Project>
+      <Name>DataManager</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
