--- a/CRUD/View.ConsoleApp/View.ConsoleApp.csproj
+++ b/CRUD/View.ConsoleApp/View.ConsoleApp.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrudManager.cs" />
     <Compile Include="InputValidation.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="InsertData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
