--- a/CRUD/View.WinFormApp/View.WinFormApp.csproj
+++ b/CRUD/View.WinFormApp/View.WinFormApp.csproj
@@ -79,5 +79,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Business\BLL.csproj">
+      <Project>{80fd2882-2c77-4abb-ba16-8bb76c3e1691}</Project>
+      <Name>BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DataManager\Model.csproj">
+      <Project>{5bb8fe24-9a99-4fb2-9096-01f70447be61}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
