--- a/CRUD/View.WinFormApp/View.WinFormApp.csproj
+++ b/CRUD/View.WinFormApp/View.WinFormApp.csproj
@@ -46,6 +46,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Views\Create.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Create.Designer.cs">
+      <DependentUpon>Create.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Delete.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Delete.Designer.cs">
+      <DependentUpon>Delete.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Read.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Read.Designer.cs">
+      <DependentUpon>Read.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Update.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Update.Designer.cs">
+      <DependentUpon>Update.cs</DependentUpon>
+    </Compile>
     <Compile Include="VisualFormer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +87,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\Create.resx">
+      <DependentUpon>Create.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VisualFormer.resx">
       <DependentUpon>VisualFormer.cs</DependentUpon>
     </EmbeddedResource>
