--- a/CRUD/View.ConsoleApp/View.ConsoleApp.csproj
+++ b/CRUD/View.ConsoleApp/View.ConsoleApp.csproj
@@ -43,9 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrudManager.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="InsertData.cs" />
+    <Compile Include="Manager.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
