--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/Git/FileContentIndex/1d8ae3fa-ad46-421c-84eb-addfd3e41b61.vsidx
+/.vs/Git/FileContentIndex/be813282-3a72-4c46-b4eb-94f3c53131a4.vsidx
+/.vs/Git/FileContentIndex/ff15ba8f-f35a-4487-ba99-899206f57084.vsidx
