--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,23 @@
 /.vs/Git/FileContentIndex/1d8ae3fa-ad46-421c-84eb-addfd3e41b61.vsidx
 /.vs/Git/FileContentIndex/be813282-3a72-4c46-b4eb-94f3c53131a4.vsidx
 /.vs/Git/FileContentIndex/ff15ba8f-f35a-4487-ba99-899206f57084.vsidx
+/.vs/CSharpStudies/FileContentIndex/28c4d137-3d5f-4194-8145-c81cb2309dbd.vsidx
+/.vs/CSharpStudies/FileContentIndex/5beed740-fff8-4f42-8db0-905d661b2c2a.vsidx
+/.vs/CSharpStudies/FileContentIndex/fb4365cd-f588-493f-8073-1d4749e5b4c1.vsidx
+/.vs/CSharpStudies/FileContentIndex/f6cc5b60-677c-4d35-a20a-afd9e9e6a2d9.vsidx
+/.vs/CSharpStudies/FileContentIndex/e20ef8a2-5ac3-46c9-ae8e-573b2f2fedd7.vsidx
+/.vs/CSharpStudies/FileContentIndex/db4b6a59-e463-446b-8e1a-027ab2b817cd.vsidx
+/.vs/CSharpStudies/v17/.wsuo
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/CSharpStudies/FileContentIndex/960a7d54-5cce-4e5e-b8b7-3fabc0cd76ca.vsidx
+/CRUD/Business/obj/Debug/BLL.csproj.AssemblyReference.cache
+/CRUD/DataAccess/obj/Debug/DAL.csproj.AssemblyReference.cache
+/.vs/CSharpStudies/FileContentIndex/24708b84-9863-4375-bb12-c77da31e00f6.vsidx
+/.vs/CSharpStudies/FileContentIndex/ed65c7de-ef43-4360-afaf-8ad85190a036.vsidx
+/.vs/CSharpStudies/FileContentIndex/13d76090-e157-4105-9d5a-0f6e6d599014.vsidx
+/CRUD/View.ConsoleApp/obj/Debug/View.ConsoleApp.csproj.AssemblyReference.cache
+/CRUD/View.WinFormApp/obj/Debug/View.WinFormApp.csproj.AssemblyReference.cache
+/.vs/CSharpStudies/FileContentIndex/230ec200-1d46-49e6-9786-4697445e8546.vsidx
+*.vsidx
+/CRUD/View.WinFormApp/obj/Debug/View.WinFormApp.csproj.AssemblyReference.cache
