--- a/ByteBank/ByteBank.csproj
+++ b/ByteBank/ByteBank.csproj
@@ -35,6 +35,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,9 +46,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accounts\CurrentAccount.cs" />
+    <Compile Include="Control\Controler.cs" />
+    <Compile Include="Employer\Director.cs" />
+    <Compile Include="Employer\Employers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Holder\Client.cs" />
+    <Compile Include="View\ViewConsole.cs" />
+    <Compile Include="View\ViewWinForms.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewWinForms.Designer.cs">
+      <DependentUpon>ViewWinForms.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
