--- a/ByteBank/ByteBank.csproj
+++ b/ByteBank/ByteBank.csproj
@@ -45,30 +45,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accounts\CurrentAccount.cs" />
-    <Compile Include="Control\Controler.cs" />
-    <Compile Include="Employer\Analist.cs" />
-    <Compile Include="Employer\Authenticator.cs" />
-    <Compile Include="Employer\Director.cs" />
-    <Compile Include="Employer\Employers.cs" />
-    <Compile Include="InternalSystem\IAuthenticable.cs" />
-    <Compile Include="Employer\Manager.cs" />
-    <Compile Include="Employer\Programmer.cs" />
-    <Compile Include="InternalSystem\SystemManager.cs" />
-    <Compile Include="Partner\ComercialPartner.cs" />
+    <Compile Include="Architecture\MVC\Model\Services\Accounts\CurrentAccount.cs" />
+    <Compile Include="Architecture\MVC\Control\Controler.cs" />
+    <Compile Include="Architecture\MVC\Model\ADM\Employer\Analist.cs" />
+    <Compile Include="Architecture\MVC\Model\ADM\Employer\Authenticator.cs" />
+    <Compile Include="Architecture\MVC\Model\ADM\Employer\Director.cs" />
+    <Compile Include="Architecture\MVC\Model\ADM\Employer\Employers.cs" />
+    <Compile Include="Architecture\MVC\Model\ADM\InternalSystem\IAuthenticable.cs" />
+    <Compile Include="Architecture\MVC\Model\ADM\Employer\Manager.cs" />
+    <Compile Include="Architecture\MVC\Model\ADM\Employer\Programmer.cs" />
+    <Compile Include="Architecture\MVC\Model\ADM\InternalSystem\SystemManager.cs" />
+    <Compile Include="Architecture\MVC\Model\ADM\Partner\ComercialPartner.cs" />
+    <Compile Include="Exceptions\ByteBankException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Holder\Client.cs" />
-    <Compile Include="View\ViewConsole.cs" />
-    <Compile Include="View\ViewWinForms.cs">
+    <Compile Include="Architecture\MVC\Model\Services\Holder\Client.cs" />
+    <Compile Include="Architecture\MVC\View\ViewConsole.cs" />
+    <Compile Include="Architecture\MVC\View\ViewWinForms.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\ViewWinForms.Designer.cs">
+    <Compile Include="Architecture\MVC\View\ViewWinForms.Designer.cs">
       <DependentUpon>ViewWinForms.cs</DependentUpon>
     </Compile>
+    <Compile Include="Util\CurrentAccountsList.cs" />
+    <Compile Include="Util\GenericList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
