--- a/ByteBank/ByteBank.csproj
+++ b/ByteBank/ByteBank.csproj
@@ -67,8 +67,12 @@
     <Compile Include="Architecture\MVC\View\ViewWinForms.Designer.cs">
       <DependentUpon>ViewWinForms.cs</DependentUpon>
     </Compile>
-    <Compile Include="Util\CurrentAccountsList.cs" />
-    <Compile Include="Util\GenericList.cs" />
+    <Compile Include="Util\CurrentAccountHashset.cs" />
+    <Compile Include="Util\CurrentAccountQueue.cs" />
+    <Compile Include="Util\CurrentAccountsArray.cs" />
+    <Compile Include="Util\CurrentAccountList.cs" />
+    <Compile Include="Util\CurrentAccountSortedList.cs" />
+    <Compile Include="Util\CurrentAccountStack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
