--- a/ByteBank/ByteBank.csproj
+++ b/ByteBank/ByteBank.csproj
@@ -56,27 +56,25 @@
     <Compile Include="Architecture\MVC\Model\ADM\Employer\Programmer.cs" />
     <Compile Include="Architecture\MVC\Model\ADM\InternalSystem\SystemManager.cs" />
     <Compile Include="Architecture\MVC\Model\ADM\Partner\ComercialPartner.cs" />
+    <Compile Include="Architecture\MVC\Model\Services\Accounts\PixKeyGenerator.cs" />
     <Compile Include="Exceptions\ByteBankException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Architecture\MVC\Model\Services\Holder\Client.cs" />
-    <Compile Include="Architecture\MVC\View\ViewConsole.cs" />
-    <Compile Include="Architecture\MVC\View\ViewWinForms.cs">
+    <Compile Include="Architecture\MVC\View\Services\ViewConsole.cs" />
+    <Compile Include="Architecture\MVC\View\Services\ViewWinForms.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Architecture\MVC\View\ViewWinForms.Designer.cs">
+    <Compile Include="Architecture\MVC\View\Services\ViewWinForms.Designer.cs">
       <DependentUpon>ViewWinForms.cs</DependentUpon>
     </Compile>
-    <Compile Include="Util\CurrentAccountHashset.cs" />
-    <Compile Include="Util\CurrentAccountQueue.cs" />
-    <Compile Include="Util\CurrentAccountsArray.cs" />
-    <Compile Include="Util\CurrentAccountList.cs" />
-    <Compile Include="Util\CurrentAccountSortedList.cs" />
-    <Compile Include="Util\CurrentAccountStack.cs" />
+    <Compile Include="Util\GenericList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Architecture\MVC\View\ADM\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
