--- a/CRUD/View.ConsoleApp/View.ConsoleApp.csproj
+++ b/CRUD/View.ConsoleApp/View.ConsoleApp.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,8 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InsertData.cs" />
-    <Compile Include="Manager.cs" />
+    <Compile Include="Utils\ManipulateData.cs" />
+    <Compile Include="Utils\Operations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
