Updates feitos na Fderivs

--- a/CRUD_BD/BLL/BLL.csproj
+++ b/CRUD_BD/BLL/BLL.csproj
@@ -44,5 +44,15 @@
     <Compile Include="BusinessRules.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{aa295ed3-621c-4386-b7ca-0a84c73fb93f}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{14481602-749c-441b-95b4-ee70d519b75c}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
