--- a/CRUD_BD/DAL/DAL.csproj
+++ b/CRUD_BD/DAL/DAL.csproj
@@ -44,5 +44,11 @@
     <Compile Include="DAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{14481602-749c-441b-95b4-ee70d519b75c}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
