--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,4 @@ AppPackages/
 /Alura/.vs/AluraCourse/FileContentIndex/ce42b623-fab1-4b9b-bd5f-1c3b06635017.vsidx
 /Alura/.vs/AluraCourse/FileContentIndex/7fd4b6c9-69b9-4985-91e1-c0a4481b242f.vsidx
 /Alura/.vs/AluraCourse/FileContentIndex/673255f1-381d-42bf-ad64-338da1e9f6e3.vsidx
+/.vs/VSWorkspaceState.json
