--- a/NetMAUI/MauiPlusBlazor/API/appsettings.json
+++ b/NetMAUI/MauiPlusBlazor/API/appsettings.json
@@ -13,5 +13,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "jwtKey": "POQSAJNTJSBKNGAMN23@!E!EI890Qasdfasdf2344O!TGJzwerwerqwrtgwerfgregERG089&ctr#$&%*#@r$@#33245252345$@#$tr@#$dfsdft@#$t@#$aaa!@$%%!sdf234rq"
+} 
