--- a/NetMAUI/MauiPlusBlazor/API/appsettings.json
+++ b/NetMAUI/MauiPlusBlazor/API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Mail": {
+    "From": "hanilokko@gmail.com",
+    "Name": "Soporte Sales",
+    "Smtp": "smtp.gmail.com",
+    "Port": 587,
+    "Password": "Yuyuhakusho23"
+  },
+  "UrlWEB": "localhost:43000",
   "ConnectionStrings": {
     "Connection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Sales;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
